--- a/sushnaya-ios/Info.plist
+++ b/sushnaya-ios/Info.plist
@@ -28,7 +28,7 @@
 		</array>
 	</dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>ru</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
